--- a/user/css/index.css
+++ b/user/css/index.css
@@ -360,3 +360,33 @@ select {
     border: none;
 }
 
+.photo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.signature-box {
+    width: 200px;
+    height: 200px;
+    border: 2px dashed #ccc;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+    background-color: #f9f9f9;
+}
+.camera-controls {
+    margin-top: 10px;
+    display: flex;
+    gap: 10px;
+}
+#photoPlaceholder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
