--- a/admin/css/view.css
+++ b/admin/css/view.css
@@ -134,12 +134,6 @@ body {
     margin-bottom: 20px;
 }
 
-.photo-box {
-    border: 1px solid #000;
-    width: 150px;
-    height: 180px;
-    margin-left: 20px;
-}
 
 
 /* Section Styles */
@@ -186,7 +180,6 @@ body {
     margin-right: 10px
 }
 
-/* Styling for Civil Status Checkboxes in Row Format */
 .form-checkbox {
     display: flex;
     flex-direction: column;
@@ -286,12 +279,7 @@ th {
     margin-bottom: 20px;
 }
 
-.photo-box {
-    border: 1px solid #000;
-    width: 150px;
-    height: 180px;
-    margin-left: 20px;
-}
+
 
 /* Section Styles */
 .section {
@@ -349,31 +337,52 @@ th {
     background-color: #f0f0f0;
 }
 
-.signature-box {
-    width: 200px;
-    height: 200px;
-    border: 1px solid #ccc;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.signature-container {
+    position: relative;
+    min-height: 200px;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.signature-area {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50px;
     text-align: center;
-    overflow: hidden;
-    background-color: #f9f9f9;
 }
 
-.signature-box img {
+.centered-signature {
     max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+    max-height: 150px;
+    width: auto;
+    height: auto;
+    margin: 0 auto 5px;
+    display: block;
 }
 
-.photo-placeholder {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    font-size: 14px;
-    color: #555;
+.signature-title {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    font-weight: lighter;
+    margin-top: -30px; 
+}
+
+.signature-title::before {
+    content: "";
+    display: block;
+    margin-bottom: 100px;
+    width: 30%;
+    margin: 5px auto 0;
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+.photo-box {
+    position: absolute;
+    right: 10px;
+    top: 0;
+    border: 1px solid #000;
+
 }
