--- a/user/css/index.css
+++ b/user/css/index.css
@@ -135,6 +135,8 @@
     font-size: 10px;
 }
 
+
+
 /* Form Styles */
 .form-title {
     font-size: 14px;
@@ -398,12 +400,12 @@ select {
     object-fit: contain;
 }
 
-#photo-box {
-    background-color: white !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+.photo-box {
+    position: absolute;
+    right: 10px;
+    top: 0;
+    border: 1px solid #000;
+
 }
 .container {
     width: 100%;
@@ -417,35 +419,46 @@ select {
     width: 100%;
 }
 
-.signature-area {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 20px;
-    margin-top: 80px; 
-    padding-top: 30px; 
+.signature-container {
     position: relative;
+    min-height: 200px;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-#signaturePlaceholder {
+.signature-area {
     position: absolute;
-    width: 150%;
+    left: 0;
+    right: 0;
+    top: 50px;
     text-align: center;
-    top: 10px;
-    color: #000000;
 }
 
-
-.signature-label {
-    text-align: center;
-    font-size: 14px;
-    margin-bottom: 15px;
+.centered-signature {
+    max-width: 100%;
+    max-height: 150px;
+    width: auto;
+    height: auto;
+    margin: 0 auto 5px;
+    display: block;
 }
 
-.signature-controls {
-    display: flex;
-    gap: 10px;
+.signature-title {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    font-weight: lighter;
+    margin-top: -30px; 
+}
+
+.signature-title::before {
+    content: "";
+    display: block;
+    margin-bottom: 100px;
+    width: 30%;
+    margin: 5px auto 0;
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 /* Hide the signature buttons after saving to avoid clutter */
