--- a/user/css/tesda.css
+++ b/user/css/tesda.css
@@ -419,46 +419,47 @@ select {
     width: 100%;
 }
 
-.signature-container {
-    position: relative;
-    min-height: 200px;
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
 .signature-area {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 50px;
-    text-align: center;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 20px;
+    margin-top: 80px; 
+    padding-top: 30px; 
+    position: relative;
 }
 
-.centered-signature {
-    max-width: 100%;
-    max-height: 150px;
+
+#capturedSignature {
+    display: none; 
+    max-width: 50%; 
+    max-height: 50%; 
     width: auto;
     height: auto;
-    margin: 0 auto 5px;
-    display: block;
+    border-bottom: 2px solid #000;
 }
 
-.signature-title {
+
+
+#signaturePlaceholder {
+    position: absolute;
+    width: 200%;
     text-align: center;
-    color: rgb(0, 0, 0);
-    font-size: 15px;
-    font-weight: lighter;
-    margin-top: -30px; 
+    top: 10px;
+    color: #000000;
 }
 
-.signature-title::before {
-    content: "";
-    display: block;
-    margin-bottom: 100px;
-    width: 30%;
-    margin: 5px auto 0;
-    border-bottom: 1px solid rgb(0, 0, 0);
+
+.signature-label {
+    text-align: center;
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+
+.signature-controls {
+    display: flex;
+    gap: 10px;
 }
 
 /* Hide the signature buttons after saving to avoid clutter */
